# mdview

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/: RELEASE_NOTES.md
.github/workflows/: build.yml
cmake/: CompilerWarnings.cmake  GenerateViewerResources.cmake  TcmdPlugin.cmake  pch.hpp
docs/: architecture.md  building.md  installing.md
src/: CMakeLists.txt
src/common/: paths.cpp  paths.hpp  utf.cpp  utf.hpp  version.cpp  version.hpp
src/native/: asset_router.cpp  asset_router.hpp  debug_log.cpp  debug_log.hpp  detect_string.cpp  detect_string.hpp  document_format.cpp  document_format.hpp  document_loader.cpp  document_loader.hpp  embedded_assets.cpp  embedded_assets.hpp  embedded_resource_stream.cpp  embedded_resource_stream.hpp  encoding.cpp  encoding.hpp  event_revoker.cpp  event_revoker.hpp  host_names.hpp  i_webview2_host.hpp  init_error.cpp  init_error.hpp  perf.hpp  plugin_globals.cpp  plugin_globals.hpp  precache_manager.cpp  precache_manager.hpp  renderer_protocol.cpp  renderer_protocol.hpp  runtime_version.cpp  runtime_version.hpp  theme.hpp  viewer_host.cpp  viewer_host.hpp  viewer_paths.cpp  viewer_paths.hpp  webview2_environment.cpp  webview2_environment.hpp  webview2_externalize.cpp  webview2_externalize.hpp  (+2 more)
src/platform/: dpi_compat.cpp  dpi_compat.hpp  win32_window.cpp  win32_window.hpp
src/plugin/: dll_main.cpp  fallback_window.cpp  fallback_window.hpp  listclose_defer.hpp  plugin_window.cpp  plugin_window.hpp  tc_lister_constants.hpp  wlx_exports.cpp  wlx_exports.def
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  debug_monitor.cpp  debug_monitor.hpp  main.cpp  pump.cpp  pump.hpp  screenshot.cpp  screenshot.hpp  session.cpp  session.hpp  summary.cpp  summary.hpp  test_audit_late_remap.cpp  test_embedded_assets.cpp  test_focus.cpp  test_highlight.cpp  test_html.cpp  test_latex.cpp  test_lifecycle.cpp  test_m10_perf.cpp  test_markdown_polish.cpp  test_math.cpp  test_mermaid.cpp  test_navigation_block.cpp  test_precache.cpp  test_search.cpp  test_theme.cpp
tests/native/: detect_string_tests.cpp  document_format_tests.cpp  paths_tests.cpp  plugin_globals_tests.cpp  test_asset_router.cpp  test_document_loader.cpp  test_embedded_assets.cpp  test_embedded_resource_stream.cpp  test_encoding.cpp  test_event_revoker.cpp  test_externalize.cpp  test_init_error.cpp  test_listclose_reentrancy.cpp  test_log_bridge.cpp  test_main.cpp  test_module_pin.cpp  test_plugin_window_commands.cpp  test_precache_manager.cpp  test_renderer_protocol.cpp  test_runtime_version.cpp  test_summary_v2.cpp  test_theme.cpp  test_viewer_host.cpp  test_viewer_paths.cpp  test_win32_window.cpp  utf_tests.cpp  version_tests.cpp
tests/smoke/: 01_mixed.md  03_absolute_link.md  04_javascript_link.md  05_first.md  05_second.md  08_mermaid_basic.md  09_mermaid_mixed.md  10_mermaid_broken.md  11_hljs_languages.md  12_theme_dark.md  13_theme_runtime_change.md  14_focus_signal.md  15_math_basic.md  16_math_mixed.md  17_math_malformed.md  18_perf_stress.md  19_github_alerts.md  20_math_many.md  21_heading_anchors.md  24_xhtml_basic.xhtml  27_html_with_text.html  28_latex_basic.tex  29_latex_math.tex  30_latex_error.tex  README.md
tests/smoke/02_image/: 02_image.md
tests/smoke/07_encoding/: 07a_utf8_bom.md  07b_utf16_le_bom.md  07c_utf8_no_bom.md  07d_cp1252.md  07e_utf16le_double_bom.md  07f_utf8_bom_heading.md
tests/smoke/22_resource_unsafe_name/: 22_resource_unsafe_name.md
tests/smoke/23_html_basic/: 23_html_basic.html  style.css
tests/smoke/25_html_frameset/: 25_html_frameset.html  chapter1.htm  chapter2.htm  toc.htm
tests/smoke/26_html_internal_links/: chapter_a.htm  chapter_b.htm  index.htm
tests/smoke/31_latex_image/: 31_latex_image.tex
tools/: build.ps1  check-no-redist.ps1  check-win7-imports.ps1  dev-env.ps1  find-non-ascii.ps1  get-version.ps1  install-to-totalcmd.ps1  package-readme.txt.template  package-release.ps1  pluginst.inf.template
tools/dpi_probe/: CMakeLists.txt  main.cpp  probe.html
tools/precache_probe/: CMakeLists.txt  main.cpp  probe.html
tools/spikes/math-engine/: README.md  corpus.json  engines.js  harness.js  index.html  report.js
tools/win7_spike/: CMakeLists.txt  build-spike.ps1  main.cpp  vcpkg.json
triplets/: x64-windows-static.cmake  x86-windows-static.cmake
viewer/: build.mjs  index.html  package-lock.json  package.json  styles.css  tsconfig.json
viewer/src/: app.ts  declarations.d.ts  highlight.ts  katex-worker.ts  latex-chunk.ts  log.ts  markdown.ts  math-chunk.ts  math-rules.ts  mermaid-chunk.ts  protocol.ts  render-dispatch.ts  sanitize.ts  summary.ts  theme.ts
viewer/styles/: katex-overrides.css
